// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderSelection matches snapshot when no quotes are available 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              style={
                                [
                                  {
                                    "transform": [
                                      {
                                        "scale": 1,
                                      },
                                    ],
                                  },
                                  {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                ]
                              }
                            >
                              <View
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "transparent",
                                      "borderRadius": 8,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "opacity": 1,
                                      "width": 32,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="button-icon"
                              >
                                <SvgMock
                                  fill="currentColor"
                                  name="ArrowLeft"
                                  style={
                                    [
                                      {
                                        "color": "#121314",
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                    ]
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                [
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Bold",
                                    "fontSize": 16,
                                    "fontWeight": 400,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <RCTScrollView
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "backgroundColor": "#ca35421a",
                                "borderColor": "#ca3542",
                                "borderLeftWidth": 4,
                                "borderRadius": 4,
                                "flexDirection": "row",
                                "padding": 12,
                                "paddingLeft": 8,
                              }
                            }
                            testID="banneralert"
                          >
                            <View
                              style={
                                {
                                  "marginRight": 8,
                                }
                              }
                            >
                              <SvgMock
                                color="#ca3542"
                                fill="currentColor"
                                height={24}
                                name="Danger"
                                style={
                                  {
                                    "height": 24,
                                    "width": 24,
                                  }
                                }
                                width={24}
                              />
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                No providers available.
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ProviderSelection matches snapshot when quotes are loading 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              style={
                                [
                                  {
                                    "transform": [
                                      {
                                        "scale": 1,
                                      },
                                    ],
                                  },
                                  {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                ]
                              }
                            >
                              <View
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "transparent",
                                      "borderRadius": 8,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "opacity": 1,
                                      "width": 32,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="button-icon"
                              >
                                <SvgMock
                                  fill="currentColor"
                                  name="ArrowLeft"
                                  style={
                                    [
                                      {
                                        "color": "#121314",
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                    ]
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                [
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Bold",
                                    "fontSize": 16,
                                    "fontWeight": 400,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <RCTScrollView
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                      >
                        <View>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            disabled={false}
                            style={
                              {
                                "backgroundColor": "#ffffff",
                                "borderRadius": 4,
                                "opacity": 1,
                                "position": "relative",
                              }
                            }
                          >
                            <View
                              accessibilityRole="none"
                              accessible={true}
                              style={
                                {
                                  "padding": 16,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      {
                                        "borderRadius": 4,
                                        "height": 20,
                                        "overflow": "hidden",
                                        "width": 120,
                                      }
                                    }
                                  >
                                    <View
                                      collapsable={false}
                                      pointerEvents="none"
                                      style={
                                        {
                                          "backgroundColor": "#686e7d",
                                          "borderRadius": 4,
                                          "bottom": 0,
                                          "left": 0,
                                          "opacity": 0.2,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                </View>
                                <View
                                  accessible={false}
                                  style={
                                    {
                                      "width": 16,
                                    }
                                  }
                                  testID="listitem-gap"
                                />
                                <View
                                  style={
                                    {
                                      "flex": -1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-end",
                                          "display": "flex",
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 80,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                    <View
                                      style={
                                        {
                                          "height": 6,
                                        }
                                      }
                                    />
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 60,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </TouchableOpacity>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            disabled={false}
                            style={
                              {
                                "backgroundColor": "#ffffff",
                                "borderRadius": 4,
                                "opacity": 1,
                                "position": "relative",
                              }
                            }
                          >
                            <View
                              accessibilityRole="none"
                              accessible={true}
                              style={
                                {
                                  "padding": 16,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      {
                                        "borderRadius": 4,
                                        "height": 20,
                                        "overflow": "hidden",
                                        "width": 120,
                                      }
                                    }
                                  >
                                    <View
                                      collapsable={false}
                                      pointerEvents="none"
                                      style={
                                        {
                                          "backgroundColor": "#686e7d",
                                          "borderRadius": 4,
                                          "bottom": 0,
                                          "left": 0,
                                          "opacity": 0.2,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                </View>
                                <View
                                  accessible={false}
                                  style={
                                    {
                                      "width": 16,
                                    }
                                  }
                                  testID="listitem-gap"
                                />
                                <View
                                  style={
                                    {
                                      "flex": -1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-end",
                                          "display": "flex",
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 80,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                    <View
                                      style={
                                        {
                                          "height": 6,
                                        }
                                      }
                                    />
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 60,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </TouchableOpacity>
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            disabled={false}
                            style={
                              {
                                "backgroundColor": "#ffffff",
                                "borderRadius": 4,
                                "opacity": 1,
                                "position": "relative",
                              }
                            }
                          >
                            <View
                              accessibilityRole="none"
                              accessible={true}
                              style={
                                {
                                  "padding": 16,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      {
                                        "borderRadius": 4,
                                        "height": 20,
                                        "overflow": "hidden",
                                        "width": 120,
                                      }
                                    }
                                  >
                                    <View
                                      collapsable={false}
                                      pointerEvents="none"
                                      style={
                                        {
                                          "backgroundColor": "#686e7d",
                                          "borderRadius": 4,
                                          "bottom": 0,
                                          "left": 0,
                                          "opacity": 0.2,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                </View>
                                <View
                                  accessible={false}
                                  style={
                                    {
                                      "width": 16,
                                    }
                                  }
                                  testID="listitem-gap"
                                />
                                <View
                                  style={
                                    {
                                      "flex": -1,
                                    }
                                  }
                                  testID="listitemcolumn"
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "flex-end",
                                          "display": "flex",
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 80,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                    <View
                                      style={
                                        {
                                          "height": 6,
                                        }
                                      }
                                    />
                                    <View
                                      style={
                                        {
                                          "borderRadius": 4,
                                          "height": 16,
                                          "overflow": "hidden",
                                          "width": 60,
                                        }
                                      }
                                    >
                                      <View
                                        collapsable={false}
                                        pointerEvents="none"
                                        style={
                                          {
                                            "backgroundColor": "#686e7d",
                                            "borderRadius": 4,
                                            "bottom": 0,
                                            "left": 0,
                                            "opacity": 0.2,
                                            "position": "absolute",
                                            "right": 0,
                                            "top": 0,
                                          }
                                        }
                                      />
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </TouchableOpacity>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ProviderSelection matches snapshot when quotes fail to load 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              style={
                                [
                                  {
                                    "transform": [
                                      {
                                        "scale": 1,
                                      },
                                    ],
                                  },
                                  {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                ]
                              }
                            >
                              <View
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "transparent",
                                      "borderRadius": 8,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "opacity": 1,
                                      "width": 32,
                                    },
                                    undefined,
                                  ]
                                }
                                testID="button-icon"
                              >
                                <SvgMock
                                  fill="currentColor"
                                  name="ArrowLeft"
                                  style={
                                    [
                                      {
                                        "color": "#121314",
                                        "height": 24,
                                        "width": 24,
                                      },
                                      undefined,
                                    ]
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                [
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Bold",
                                    "fontSize": 16,
                                    "fontWeight": 400,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <RCTScrollView
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "backgroundColor": "#ca35421a",
                                "borderColor": "#ca3542",
                                "borderLeftWidth": 4,
                                "borderRadius": 4,
                                "flexDirection": "row",
                                "padding": 12,
                                "paddingLeft": 8,
                              }
                            }
                            testID="banneralert"
                          >
                            <View
                              style={
                                {
                                  "marginRight": 8,
                                }
                              }
                            >
                              <SvgMock
                                color="#ca3542"
                                fill="currentColor"
                                height={24}
                                name="Danger"
                                style={
                                  {
                                    "height": 24,
                                    "width": 24,
                                  }
                                }
                                width={24}
                              />
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                Failed to load quotes
                              </Text>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
